--- a/src/main/webapp/static/board.css
+++ b/src/main/webapp/static/board.css
@@ -4,6 +4,9 @@
     margin-right: auto;
     width: 600px;
 }
+div#board_div {
+    height: 400px;
+}
 table, td, th {
     border-collapse: collapse;
     border : 1px solid black;
